- added Top & Bottom containers for STEP models
- added allow_compound mode 'simplify' to enable fast loading (losing colors)
- removing empty Top/Bot containers after loading models (only on FC 0.17)
- added relative 3d path '../'
- added F.Fab F.CrtYd to loadFootprint function
- added StepUp WorkBench
- fixed utf-8 str to Label
- recurse placement for Collision check ['Placement.multiply']: now it works also with App::Part, Body & Compound in FC0.17
- added links to pdf files in Help
- added config value for autoconstraints in sketcher
- auto constraint coincident points and vertical/horizontal
- some cleaning on warn messages for wrong scale, missing models
- boost in cutting drills
- added sketch button
- started experimental Sketch support
- improve help and add sketch functionality
- auto constraint coincident points and vertical/horizontal
- edge_width from kicad_pcb
- managed not supported geometry BSplines & Ellipses with optimized deviation   # loop in App.ActiveDocument.PCB_Sketch.Geometry searching for coincident vertex 
- aligned Sketch to center of A4 in pcbnew if first time 
- removing sketches from export 3d to step button
- removing sketches in FC0.16 and when exporting automatically
- added use grid_origin as reference point for placing the board and for sketch!!!
  this will allow to copy sketches between boards releases to keep constraints
- fixed Sketch position for default use BaseOrigin @ 0,0,0 
- fixed App::Part list inverted after FC 12090 https://github.com/FreeCAD/FreeCAD/pull/916
- fixed case of pcb with one drill only
- minor fix when exporting wrl from multi objects 
- fixed tabify
- added better support for Body (hidden Parts)
- fixed a regression in Sketch
- fixed Arc orientation when creating Sketch from dxf,svg
- improved FC0.16 compatibility
- aligned GridOrigin also in case of Sketch copy/paste from empty board
- most clean code and comments done